--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,16 @@
             "name": "localhost에 대해 Chrome 시작",
             "url": "http://localhost:8080",
             "webRoot": "${workspaceFolder}"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-TransformerApplication<transformer>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "com.aasx.transformer.TransformerApplication",
+            "projectName": "transformer",
+            "args": "",
+            "envFile": "${workspaceFolder}/.env"
         }
     ]
 }
