--- a/transformer/src/main/resources/application.properties
+++ b/transformer/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=transformer
+
+# 파일 저장 경로
+upload.path=C:/upload
+
+# 파일 업로드 크기 제한 설정 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
+# 정적 리소스로 인식하는 것을 방지
+# spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+
