[Fix] 일부 주석 처리

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,7 @@
             "mainClass": "com.aasx.transformer.TransformerApplication",
             "projectName": "transformer",
             "args": "",
+            "/vmArgs": "-Xmx4g",
             "envFile": "${workspaceFolder}/.env"
         }
     ]
