[Front, Back] 업로드 및 json 변환 성공

--- a/transformer/src/main/resources/application.properties
+++ b/transformer/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 
+spring.boot.admin.client.jvm-args=-Xmx2g -Xms512m
+
 # 정적 리소스로 인식하는 것을 방지
 # spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
