[Front, Back] json으로 최종 다운로드

--- a/transformer/src/main/resources/application.properties
+++ b/transformer/src/main/resources/application.properties
@@ -3,6 +3,10 @@ spring.application.name=transformer
 # 파일 저장 경로
 upload.path=C:/upload
 
+# 파일 다운로드 경로
+download.base-url=http://localhost:3000
+
+
 # 파일 업로드 크기 제한 설정 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=50MB
