[Front, Back] Phase1 완성 ( http to https, 변환된  json 파일 다운로드, 첨부파일 URL 다운로드)

--- a/transformer/src/main/resources/application.properties
+++ b/transformer/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=transformer
 upload.path=C:/upload
 
 # 파일 다운로드 경로
-download.base-url=http://localhost:3000
+download.base-url=https://localhost:8443
 
 
 # 파일 업로드 크기 제한 설정 
@@ -17,4 +17,11 @@ spring.boot.admin.client.jvm-args=-Xmx2g -Xms512m
 # 정적 리소스로 인식하는 것을 방지
 # spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
+
+server.port=8443
+server.ssl.enabled=true
+server.ssl.key-store=classpath:groskeystore.pkcs12
+server.ssl.key-store-password=aasx123
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=mykey
 
