--- a/transformer/src/main/resources/application.properties
+++ b/transformer/src/main/resources/application.properties
@@ -25,3 +25,8 @@ server.ssl.key-store-password=aasx123
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=mykey
 
+# sqlite db
+spring.datasource.url=jdbc:sqlite:C:/SQLite/aasx_transformer.db
+spring.datasource.driver-class-name=org.sqlite.JDBC
+spring.datasource.username=
+spring.datasource.password=
