[Back] 테이블 수정 후 DB 재연결

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,8 @@
         {
             "previewLimit": 50,
             "driver": "SQLite",
-            "database": "C:\\SQLite\\aasx_transformer.sqlite",
-            "name": "aasx_transformer"
+            "database": "C:\\SQLite\\aasx.sqlite",
+            "name": "aasx"
         }
     ]
 }
