--- a/transformer/src/main/resources/application.properties
+++ b/transformer/src/main/resources/application.properties
@@ -30,3 +30,8 @@ spring.datasource.url=jdbc:sqlite:C:/SQLite/aasx_transformer.db
 spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.datasource.username=
 spring.datasource.password=
+
+# mapper
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=com.aasx.transformer.upload.dto
+mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
