[Front] File List UI

--- a/transformer/src/main/resources/application.properties
+++ b/transformer/src/main/resources/application.properties
@@ -34,4 +34,5 @@ spring.datasource.password=
 # mapper
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.aasx.transformer.upload.dto
-mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
+mybatis.mapper-locations=mybatis.mapper-locations=classpath:com/aasx/transformer/upload/mapper/*.xml
+
