[Front, Back] JSON to AASX 초기

--- a/transformer/src/main/resources/application.properties
+++ b/transformer/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=transformer
 
 # 파일 저장 경로
 upload.path=C:/upload
+upload.temp-path=C:/temp
 
 # 파일 다운로드 경로
 download.base-url=https://localhost:8443
