[Front, Back] 로그에 중복 참조 발생 미해결

--- a/transformer/src/main/resources/application.properties
+++ b/transformer/src/main/resources/application.properties
@@ -37,3 +37,7 @@ mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.aasx.transformer.upload.dto
 mybatis.mapper-locations=mybatis.mapper-locations=classpath:com/aasx/transformer/upload/mapper/*.xml
 
+# URL-only 모드에서는 inMemFiles 리스트가 비어 있으므로, 
+# AASXSerializer가 “이 URL 파일은 인메모리 파일에 없어서 패키징 못 했다”라는 WARN 로그 발생
+# 실제 AASX 패키징은 문제없이 잘 되고 있으므로 WARN 로그가 안 보이게 처리
+# logging.level.org.eclipse.digitaltwin.aas4j.v3.dataformat.aasx.AASXSerializer=ERROR
